[package]
name = "memory_grabber"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.71"
scopeguard = "1.1.0"
windows = { version = "0.48.0", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Diagnostics_ProcessSnapshotting",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Diagnostics_Debug_Extensions",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
] }
